--- a/views/admin/editBlog.ejs
+++ b/views/admin/editBlog.ejs
@@ -20,6 +20,7 @@
                 <div class="col-md-8 col-md-offset-2 col-xs-12">
                     <main>
                         <form class="product-form" method="POST" action="/admin/update/<%= blog.id %>">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="title">Title</label>
                                 <input type="text" name="title" value="<%= blog.title %> ">
@@ -32,7 +33,6 @@
                                 <label for="article">Blog Post</label>
                                 <textarea id="my-expressjs-tinymce-app" rows='40' name="article"><%= blog.article %></textarea>
                             </div>
-
                             <button class="btn" type="submit">Apply Update</button>
                         </form>
                     </main>
