--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -37,25 +37,26 @@
         <div class="container-login100">
             <div class="wrap-login100">
                 <form class="login100-form validate-form" method="post" action="/auth/login">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <span class="login100-form-title p-b-43">
 						Login to continue
 					</span>
 
-                    <% if(message){ %>
+                    <% if(message.length > 0){ %>
                         <p style="color: red; text-align:center">
                             <%= message %>
                         </p>
                         <% } %>
 
-                            <div class="wrap-input100 validate-input" data-validate="Username is required">
-                                <input class="input100" type="text" name="username">
+                            <div class="wrap-input100 validate-input">
+                                <input class="input100" type="text" name="username" required>
                                 <span class="focus-input100"></span>
                                 <span class="label-input100">Username</span>
                             </div>
 
 
-                            <div class="wrap-input100 validate-input" data-validate="Password is required">
-                                <input class="input100" type="password" name="password">
+                            <div class="wrap-input100 validate-input">
+                                <input class="input100" type="password" name="password" required>
                                 <span class="focus-input100"></span>
                                 <span class="label-input100">Password</span>
                             </div>
