--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -15,4 +15,5 @@
     <!-- Custom styles for this template -->
     <link href="/css/mediumish.css" rel="stylesheet">
     <link href="/css/form.css" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
