--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -38,6 +38,10 @@
             <div class="wrap-login100">
                 <form class="login100-form validate-form" method="post" action="/auth/login">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <div class="info">
+                        <p>Checking out the platform? If yes, use the credentials below</p>
+                        <p>username: <strong>test</strong> <br> password: <strong>Test@1234</strong></p>
+                    </div>
                     <span class="login100-form-title p-b-43">
 						Login to continue
 					</span>
@@ -51,7 +55,7 @@
                             <div class="wrap-input100 validate-input">
                                 <input class="input100" type="text" name="username" required>
                                 <span class="focus-input100"></span>
-                                <span class="label-input100">Username</span>
+                                <span class="label-input100">Username/Email</span>
                             </div>
 
 
@@ -70,7 +74,7 @@
                                 </div>
 
                                 <div>
-                                    <a href="#" class="txt1">
+                                    <a href="/forget" class="txt1">
 								Forgot Password?
 							</a>
                                 </div>
