--- a/views/includes/hero.ejs
+++ b/views/includes/hero.ejs
@@ -2,7 +2,7 @@
 ================================================== -->
 <div class="container">
     <div class="mainheading">
-        <h1 class="sitetitle">Kachi Blog</h1>
+        <h1 class="sitetitle">Blog</h1>
         <!-- <p class="lead">
             A tech blog on MERN Stack.
         </p> -->
