--- a/views/auth/forget.ejs
+++ b/views/auth/forget.ejs
@@ -46,20 +46,25 @@
                             <%= message %>
                         </p>
                         <% } %>
-                            <div class="wrap-input100 validate-input">
-                                <input class="input100" type="text" name="email" required>
-                                <span class="focus-input100"></span>
-                                <span class="label-input100">email</span>
-                            </div>
+                            <% if (info.length > 0) { %>
+                                <p style="color: rgba(0, 0, 255, 0.776); text-align:center">
+                                    <%= info %>
+                                </p>
+                                <% } %>
+                                    <div class="wrap-input100 validate-input">
+                                        <input class="input100" type="text" name="email" required>
+                                        <span class="focus-input100"></span>
+                                        <span class="label-input100">email</span>
+                                    </div>
 
-                            <div class="container-login100-form-btn">
-                                <div class="g-recaptcha" style="margin: 10px auto;" data-sitekey="6LfQN7IgAAAAAMFnKO_20No6hwU55TSlGaAy0NgI"></div>
-                                <button class="login100-form-btn" style="color: white; background-color: #252628">
+                                    <div class="container-login100-form-btn">
+                                        <div class="g-recaptcha" style="margin: 10px auto;" data-sitekey="6LfQN7IgAAAAAMFnKO_20No6hwU55TSlGaAy0NgI"></div>
+                                        <button class="login100-form-btn" style="color: white; background-color: #252628">
 							Send
 						</button>
-                            </div>
+                                    </div>
 
-                            <!-- <div class="login100-form-social flex-c-m">
+                                    <!-- <div class="login100-form-social flex-c-m">
                                     <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
                                         <i class="fa fa-facebook-f" aria-hidden="true"></i>
                                     </a>
