--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -38,62 +38,69 @@
             <div class="wrap-login100">
                 <form class="login100-form validate-form" method="post" action="/auth/login">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <div class="info">
-                        <p>Checking out the platform? If yes, use the credentials below</p>
-                        <p>username: <strong>test</strong> <br> password: <strong>Test@1234</strong></p>
-                    </div>
                     <span class="login100-form-title p-b-43">
-						Login to continue
+                        Login to continue
 					</span>
-
-                    <% if(message.length > 0){ %>
-                        <p style="color: red; text-align:center">
-                            <%= message %>
+                    <% if(info.length > 0){ %>
+                        <p style="color: rgba(0, 0, 255, 0.776); text-align:center">
+                            <%= info %>
                         </p>
-                        <% } %>
-
-                            <div class="wrap-input100 validate-input">
-                                <input class="input100" type="text" name="username" required>
-                                <span class="focus-input100"></span>
-                                <span class="label-input100">Username/Email</span>
+                        <% } else { %>
+                            <div class="info">
+                                <p>Checking out the platform? If yes, use the credentials below</p>
+                                <p>username: <strong>test</strong> <br> password: <strong>Test@1234</strong></p>
                             </div>
 
+                            <% } %>
 
-                            <div class="wrap-input100 validate-input">
-                                <input class="input100" type="password" name="password" required>
-                                <span class="focus-input100"></span>
-                                <span class="label-input100">Password</span>
-                            </div>
+                                <% if(message.length > 0){ %>
+                                    <p style="color: red; text-align:center">
+                                        <%= message %>
+                                    </p>
+                                    <% } %>
 
-                            <div class="flex-sb-m w-full p-t-3 p-b-32">
-                                <div class="contact100-form-checkbox">
-                                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                                    <label class="label-checkbox100" for="ckb1">
+                                        <div class="wrap-input100 validate-input">
+                                            <input class="input100" type="text" name="username" required>
+                                            <span class="focus-input100"></span>
+                                            <span class="label-input100">Username/Email</span>
+                                        </div>
+
+
+                                        <div class="wrap-input100 validate-input">
+                                            <input class="input100" type="password" name="password" required>
+                                            <span class="focus-input100"></span>
+                                            <span class="label-input100">Password</span>
+                                        </div>
+
+                                        <div class="flex-sb-m w-full p-t-3 p-b-32">
+                                            <div class="contact100-form-checkbox">
+                                                <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                                                <label class="label-checkbox100" for="ckb1">
 								Remember me
 							</label>
-                                </div>
+                                            </div>
 
-                                <div>
-                                    <a href="/forget" class="txt1">
+                                            <div>
+                                                <a href="/forget" class="txt1">
 								Forgot Password?
 							</a>
-                                </div>
-                            </div>
+                                            </div>
+                                        </div>
 
 
-                            <div class="container-login100-form-btn">
-                                <button class="login100-form-btn" style="color: black; background-color: #ea9c0c">
+                                        <div class="container-login100-form-btn">
+                                            <button class="login100-form-btn" style="color: black; background-color: #ea9c0c">
 							Login
 						</button>
-                            </div>
+                                        </div>
 
-                            <div class="text-center p-t-46 p-b-20">
-                                <span class="txt2">
+                                        <div class="text-center p-t-46 p-b-20">
+                                            <span class="txt2">
                                         Don’t have an account? <a href="/register"> Sign up</a>
 						</span>
-                            </div>
+                                        </div>
 
-                            <!-- <div class="login100-form-social flex-c-m">
+                                        <!-- <div class="login100-form-social flex-c-m">
                                     <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
                                         <i class="fa fa-facebook-f" aria-hidden="true"></i>
                                     </a>
