Added clear description for blog image input

--- a/views/admin/newPost.ejs
+++ b/views/admin/newPost.ejs
@@ -26,8 +26,8 @@
                                 <input type="text" name="title">
                             </div>
                             <div class="form-control">
-                                <label for="imageURL">Image URL</label>
-                                <input type="text" name="imageURL">
+                                <label for="imageURL">Image URL (Must be URL of the image for it to display correctly. You can upload images to an online resource and paste the URL here)</label>
+                                <input type="text" name="imageURL" placeholder="http://xxxxxx.com">
                             </div>
                             <div class="form-control">
                                 <label for="article">Blog Post</label>
