--- a/views/admin/editBlog.ejs
+++ b/views/admin/editBlog.ejs
@@ -26,8 +26,8 @@
                                 <input type="text" name="title" value="<%= blog.title %> ">
                             </div>
                             <div class="form-control">
-                                <label for="imageURL">Primary Blog Image</label>
-                                <input type="text" name="imageURL" value="<%= blog.imageURL %> ">
+                                <label for="imageURL">Image URL (Must be the URL of the image for it to display correctly. You can upload images to an online resource and paste the URL here)</label>
+                                <input type="text" name="imageURL" value="<%= blog.imageURL %> " placeholder="http://xxxxxx.com">
                             </div>
                             <div class="form-control">
                                 <label for="article">Blog Post</label>
