Added Validation on registration and post new blog page

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -28,3 +28,12 @@
     margin-left: 76%;
     cursor: pointer;
 }
+
+.info p {
+    color: black;
+    text-align: center;
+}
+
+.invalid {
+    border: 2px solid red;
+}
