Added File Picker for Blog Images

--- a/views/admin/blog.ejs
+++ b/views/admin/blog.ejs
@@ -25,7 +25,7 @@
                                 <% for (let blog of blogs) {%>
                                     <div class="card">
                                         <a href="/post/<%= blog.id %>  ">
-                                <img class="img-fluid" src="<%= blog.imageURL %>" alt="">
+                                <img class="img-fluid" src="<%= blog.image %>" alt="">
                             </a>
                                         <div class="card-block">
                                             <h2 class="card-title">
