--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -21,7 +21,7 @@
                                 <% for (let blog of blogs) {%>
                                     <div class="card">
                                         <a href="/post/<%= blog.id %>  ">
-                                        <img style="height: 14rem; width: 100%"  src="<%= blog.imageURL %>" alt="">
+                                        <img style="height: 14rem; width: 100%"  src="<%= blog.image %>" alt="">
                                         </a>
                                         <div class="card-block">
                                             <h2 class="card-title">
