--- a/views/admin/newPost.ejs
+++ b/views/admin/newPost.ejs
@@ -30,15 +30,15 @@
                                 <% } %>
                                     <% } %>
 
-                                        <form class="product-form" method="POST" action="/admin/post_blog">
+                                        <form class="product-form" method="POST" action="/admin/post_blog" enctype="multipart/form-data">
                                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                             <div class="form-control <%= error.map(e => e.param).includes('title')?'invalid':null %>">
                                                 <label for="title">Title</label>
                                                 <input type="text" name="title" value="<%=oldData.length> 0 ? oldData[0].title : '' %>">
                                             </div>
-                                            <div class="form-control <%= error.map(e => e.param).includes('imageURL')?'invalid':null %>">
-                                                <label for="imageURL">Image URL </label>
-                                                <input type="text" name="imageURL" value="<%=oldData.length> 0 ? oldData[0].imageURL : '' %>">
+                                            <div class="form-control <%= error.map(e => e.param).includes('image')?'invalid':null %>">
+                                                <label for="image">Image</label>
+                                                <input type="file" name="image">
                                             </div>
                                             <div class="form-control <%= error.map(e => e.param).includes('article')?'invalid':null%>">
                                                 <label for="article">Blog Post</label>
