--- a/views/blog/post.ejs
+++ b/views/blog/post.ejs
@@ -82,7 +82,7 @@
                         </div>
 
                         <!-- Begin Featured Image -->
-                        <img class="featured-image img-fluid" src="<%= blog.imageURL %>" alt="">
+                        <img class="featured-image img-fluid" src="<%= blog.image %>" alt="">
                         <!-- End Featured Image -->
 
                         <!-- Begin Post Content -->
@@ -123,7 +123,7 @@
                             <div class="col-md-4">
                                 <div class="card">
                                     <a href="/post/<%= blog.id %>  ">
-                                    <img style="height: 14rem; width: 100%" src="<%= blog.imageURL %>" alt="">
+                                    <img style="height: 14rem; width: 100%" src="<%= blog.image %>" alt="">
                                 </a>
                                     <div class="card-block">
                                         <h2 class="card-title">
